# mlmg-backend

./: .env.template  README.md  commands.md  docker-compose.yml  pyproject.toml
app/: main.py
app/alembic/: env.py
app/alembic/versions/: 2024_08_13_2045-6c245bb86acb_update_users_table.py
app/api/: __init__.py
app/api/api_v1/: __init__.py  users.py
app/core/: config.py
app/core/models/: __init__.py  base.py  db_helper.py  user.py
app/core/schemas/: user.py
app/crud/: users.py
app/utils/: __init__.py
